[gd_scene load_steps=20 format=3 uid="uid://dkm34hpiyarjj"]

[ext_resource type="Texture2D" uid="uid://cs8sufojpgies" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 8.png" id="1_56ux6"]
[ext_resource type="Script" path="res://Enemy/boss_marius.gd" id="1_atwfe"]
[ext_resource type="FontVariation" uid="uid://blhvo8k7tcjjf" path="res://Dialogues/PixelFont.tres" id="2_f1jui"]
[ext_resource type="PackedScene" uid="uid://ctv8ctxgyrqbw" path="res://Health_Bar/healthbar.tscn" id="2_imit3"]
[ext_resource type="Texture2D" uid="uid://cvfovdma4051s" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 3.png" id="2_tt4b4"]
[ext_resource type="Texture2D" uid="uid://dnm1th7orvhjn" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 4.png" id="3_wt4ia"]
[ext_resource type="Texture2D" uid="uid://cim8l33qxkr20" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 5.png" id="4_q7fii"]
[ext_resource type="Texture2D" uid="uid://cw48fbgtknlob" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 6.png" id="5_nxpef"]
[ext_resource type="Texture2D" uid="uid://sw7ckoiq3b5f" path="res://Enemy/Sprite Boss MOOSHnGUN/Boss_default .png" id="6_0syfx"]
[ext_resource type="Texture2D" uid="uid://bly2opt2r3por" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 7.png" id="7_aqr52"]
[ext_resource type="Texture2D" uid="uid://cye66iagest3e" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 1.png" id="8_7wlrk"]
[ext_resource type="Texture2D" uid="uid://tp7eob4w8eeo" path="res://Enemy/Sprite Boss MOOSHnGUN/Senza nome 2.png" id="9_cjvx1"]
[ext_resource type="AudioStream" uid="uid://d1sq4xridysp2" path="res://Enemy/IntroBoss.ogg" id="13_4t6ww"]
[ext_resource type="AudioStream" uid="uid://dskxk8p5d3ln1" path="res://Enemy/DannoEnemy.mp3" id="14_877mi"]
[ext_resource type="AudioStream" uid="uid://c3qxke15lwjed" path="res://Enemy/WalkBoss_1.wav" id="15_2cux7"]
[ext_resource type="AudioStream" uid="uid://byimcdrjg87hc" path="res://Enemy/MorteBoss_1.wav" id="15_t4h7y"]
[ext_resource type="AudioStream" uid="uid://ca4c2lrbylvhf" path="res://Enemy/AttaccoBoss_1.wav" id="16_jcwgl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dbq4v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_56ux6")
}],
"loop": false,
"name": &"attack_fury",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tt4b4")
}, {
"duration": 1.0,
"texture": ExtResource("3_wt4ia")
}],
"loop": false,
"name": &"attack_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_q7fii")
}, {
"duration": 1.0,
"texture": ExtResource("5_nxpef")
}],
"loop": false,
"name": &"attack_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_0syfx")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_aqr52")
}],
"loop": false,
"name": &"die",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_7wlrk")
}, {
"duration": 1.0,
"texture": ExtResource("9_cjvx1")
}],
"loop": false,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dfksu"]
radius = 2.91947
height = 16.4739

[node name="Boss_Marius" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 13
collision_mask = 513
script = ExtResource("1_atwfe")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -304.0
offset_top = 63.0
offset_bottom = 86.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.807771, 0.858717, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_f1jui")
theme_override_font_sizes/font_size = 14
text = "Marius, il Campione"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" parent="." instance=ExtResource("2_imit3")]
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -697.0
offset_top = 106.0
offset_right = 1087.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 1
scale = Vector2(0.8, 1.52)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.925926, 0, 0, 0, 0.927273, 0, 0, 0, 0.925926, 0, 8.7422, 0)
billboard = 2
sprite_frames = SubResource("SpriteFrames_dbq4v")
animation = &"attack_right"
autoplay = "default"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.408, 0, 0, 0, 1, 0, 3.24308, 0.244237)
shape = SubResource("CapsuleShape3D_dfksu")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.52491, 0)
target_position = Vector3(0, 0, -20)
collision_mask = 3

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="Timers" type="Node" parent="."]

[node name="PunchTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="SpecialAttackTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="Intro" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("13_4t6ww")
volume_db = 10.0
bus = &"Suoni"

[node name="Hit" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("14_877mi")
bus = &"Suoni"

[node name="Die" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("15_t4h7y")
bus = &"Suoni"

[node name="Walk" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("15_2cux7")
bus = &"Suoni"

[node name="Shoot" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("16_jcwgl")
volume_db = -5.0
bus = &"Suoni"
